--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body{
     font-family: sans-serif;
-    background-image: linear-gradient(135deg, #111213 0%, #2c333d 100%);
+    
     min-height: 100vh;
   }
 
@@ -19,40 +19,45 @@ body{
     -moz-osx-font-smoothing: grayscale;
   }
   
-  section {
-      width: 100vw;
+ .page-wrap {
+      width: 100%;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 1em 1em 4em 1em;
+      background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  }
+
+  .home-slider {
+    height: 80vh;
+    width: 90vw;
+   
   }
 
   .swiper {
-    margin-top: 2em;
-    height: 70vh;
-    width: 100%;
     height: 100%;
+    width: 100%;
     position: relative;
   }
 
-  .swiper-slide {
-    border-radius: 20px;
-  }
 
  img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+    border-radius: 10px;
   }
   
   .swiper-pagination {
     text-align: center;
+    margin-bottom: 3em !important;
+    
   }
   
   .swiper-pagination-bullet {
-    background-color: white;
+    background-color: white !important;
+    
   }
 
   .swiper-button-next,
@@ -62,6 +67,14 @@ body{
     background-repeat: no-repeat;
     background-position: 0;
     margin-top: -1rem;
-    color: white;
+    color: white !important;
   }
   
+  @media (max-width:700px){
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit:scale-down;
+        border-radius: 10px;
+      }
+  }
