--- a/style.css
+++ b/style.css
@@ -1,80 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-  }
+}
 
-body{
-    font-family: sans-serif;
-    
+body {
+    font-family: 'Poppins', sans-serif;
     min-height: 100vh;
-  }
+    background-image: linear-gradient(60deg, #434446 0%, #02070c 100%);
+}
 
-  html {
-    text-rendering: optimizeLegibility;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
- .page-wrap {
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 1em 1em 4em 1em;
-      background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-  }
+.container {
+    display: grid;
+    grid-template-rows: 50% auto;
+}
 
-  .home-slider {
-    height: 80vh;
-    width: 90vw;
-   
-  }
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 4em;
+}
 
-  .swiper {
+.intro h1 {
+    color: white;
+    padding-bottom: 1em;
+    letter-spacing: .2em;
+}
+
+.intro p {
+    color: white;
+    margin-right: 13em;
+}
+
+.page-wrap {
+    margin-top: 10em;
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em 1em 4em 1em;
+}
+
+.home-slider {
+    height: 65vh;
+    width: 100vh;
+}
+
+.swiper {
     height: 100%;
     width: 100%;
     position: relative;
-  }
+}
 
-
- img {
+img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
-  }
-  
-  .swiper-pagination {
-    text-align: center;
-    margin-bottom: 3em !important;
-    
-  }
-  
-  .swiper-pagination-bullet {
-    background-color: white !important;
-    
-  }
+}
 
-  .swiper-button-next,
-  .swiper-button-prev {
-    background-image: none;
-    background-size: 0;
-    background-repeat: no-repeat;
-    background-position: 0;
-    margin-top: -1rem;
+.swiper-button-prev,
+.swiper-button-next {
     color: white !important;
-  }
-  
-  @media (max-width:700px){
+}
+
+@media (max-width:700px) {
     img {
         width: 100%;
         height: 100%;
-        object-fit:scale-down;
+        object-fit: scale-down;
         border-radius: 10px;
-      }
-  }
+    }
+}
