--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 .container {
-    display: grid;
-    grid-template-rows: 50% auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .intro {
@@ -37,9 +37,8 @@ body {
 }
 
 .page-wrap {
-    margin-top: 10em;
     width: 100%;
-    height: 30vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,6 +66,39 @@ img {
 .swiper-button-prev,
 .swiper-button-next {
     color: white !important;
+}
+
+.gallery {
+    min-height: 100vh;
+}
+
+.gallery ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    text-decoration: none;
+    margin: 1vmin;
+}
+
+.gallery ul:after {
+    content: '';
+    display: block;
+    flex-grow: 10;
+}
+
+.gallery li {
+    height: 30vh;
+    flex-grow: 1;
+    margin: .5vmin;
+}
+
+.gallery img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: auto;
+    border-radius: 1.2vmin;
+    box-shadow: 2px 2px 2px #363e49;
 }
 
 @media (max-width:700px) {
